--- a/testtest/index.html
+++ b/testtest/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html>
 <script src ='https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.js'></script>
-<script src='sketch.js'></script>
+<script src='galaxytest.js'></script>
 </html>
